syntax = "proto3";

import "common.proto";

// key(user_id, id)
message RawVideo {
    string user_id = 1;
    string id = 2;
    string simple_storage_url = 3;
    // When the video begins.
    int64 timestamp_ms = 4;
    repeated string cut_video_id = 5;
}

// key(user_id, id)
message CutVideo {
    string user_id = 1;
    string id = 2;
    string simple_storage_url = 3;
    // When the video begins.
    int64 timestamp_ms = 4;
    string raw_video_id = 5;
}

// key(user_id, id)
message RawLocation {
    string user_id = 1;
    string id = 2;
    // Location includes timestamp.
    Location location = 3;
}

// key(user_id, id)
message RawMotion {
    string user_id = 1;
    string id = 2;
    int64 velocity = 3;
    int64 acceleration = 4;
    int64 timestamp_ms = 5;
}